// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPhaseTask creates tasks for INSTALL action 1`] = `
Object {
  "testPhaseName": Object {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": Array [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:install:target-a": [Function],
  "testPhaseName:install:target-b": [Function],
  "testPhaseName:install:target-c": [Function],
}
`;

exports[`createPhaseTask creates tasks for RUN_PHASES action 1`] = `
Object {
  "testPhaseName": Object {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": Array [
      Object {
        "asyncType": "series",
        "displayName": "testPhaseName:testPhaseName",
        "tasks": Array [
          "task-fn",
          "task-fn",
          "task-fn",
        ],
      },
      Object {
        "asyncType": "series",
        "displayName": "testPhaseName:testPhaseName",
        "tasks": Array [
          "task-fn",
          "task-fn",
          "task-fn",
        ],
      },
    ],
  },
  "testPhaseName:testPhaseName": Object {
    "asyncType": "series",
    "displayName": "testPhaseName:testPhaseName",
    "tasks": Array [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:testPhaseName:install:target-a": [Function],
  "testPhaseName:testPhaseName:install:target-b": [Function],
  "testPhaseName:testPhaseName:install:target-c": [Function],
  "testPhaseName:testPhaseName:verify:target-a": [Function],
  "testPhaseName:testPhaseName:verify:target-b": [Function],
  "testPhaseName:testPhaseName:verify:target-c": [Function],
}
`;

exports[`createPhaseTask creates tasks for VERIFY action 1`] = `
Object {
  "testPhaseName": Object {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": Array [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:verify:target-a": [Function],
  "testPhaseName:verify:target-b": [Function],
  "testPhaseName:verify:target-c": [Function],
}
`;
